[package]
name = "indb"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
atoi = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tokio-stream = "0.1"
futures-util = "0.3"
async-stream = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
